--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                       <li class="nav-item"><a class="nav-link" href="#project">The Project</a></li>
                       <li class="nav-item"><a class="nav-link" href="#networks">Explore the networks</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#portfolio">More about the Florios</a></li>
                   </ul>
               </div>
           </div>
@@ -115,144 +115,57 @@
           <div class="container-fluid p-0">
               <div class="row g-0">
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/albero.png" title="Florio's genealogy tree">
+                          <img class="img-fluid" src="images/albero.png" alt="..." style="height:278px"/>
                           <div class="portfolio-box-caption">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">Florio's genealogy tree</div>
                           </div>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/quattro_pizzi.jpg" title="Villa dei Quattro Pizzi">
+                          <img class="img-fluid" src="images/quattro_pizzi.jpg" alt="..." />
                           <div class="portfolio-box-caption">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">Villa dei "Quattro Pizzi"</div>
                           </div>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/tonno.jpg" title="The name Florio on an advertisement of their tuna">
+                          <img class="img-fluid" src="images/tonno.jpg" alt="..." style="height: 278px;"/>
                           <div class="portfolio-box-caption">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">The name Florio on an advertisement of their tuna</div>
                           </div>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/vincenzo-florio.jpg" title="Vincenzo Florio (1799-1868)">
+                          <img class="img-fluid" src="images/vincenzo-florio.jpg" alt="..." style="width: 94%;"/>
                           <div class="portfolio-box-caption">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">Vincenzo Florio (1799-1868)</div>
                           </div>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/marsala.png" title="Marsala Florio">
+                          <img class="img-fluid" src="images/marsala.png" alt="..." />
                           <div class="portfolio-box-caption">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">Marsala Florio</div>
                           </div>
                       </a>
                   </div>
                   <div class="col-lg-4 col-sm-6">
-                      <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                          <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                      <a class="portfolio-box" href="images/coppa_florio.png" title="Targa Florio">
+                          <img class="img-fluid" src="images/coppa_florio.png" alt="..." style="height:620px"/>
                           <div class="portfolio-box-caption p-3">
-                              <div class="project-category text-white-50">Category</div>
-                              <div class="project-name">Project Name</div>
+                              <div class="project-name">Targa Florio</div>
                           </div>
                       </a>
                   </div>
               </div>
           </div>
       </div>
-      <!-- Call to action-->
-      <section class="page-section bg-dark text-white">
-          <div class="container px-4 px-lg-5 text-center">
-              <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-              <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
-          </div>
-      </section>
-      <!-- Contact-->
-      <section class="page-section" id="contact">
-          <div class="container px-4 px-lg-5">
-              <div class="row gx-4 gx-lg-5 justify-content-center">
-                  <div class="col-lg-8 col-xl-6 text-center">
-                      <h2 class="mt-0">Let's Get In Touch!</h2>
-                      <hr class="divider" />
-                      <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
-                  </div>
-              </div>
-              <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
-                  <div class="col-lg-6">
-                      <!-- * * * * * * * * * * * * * * *-->
-                      <!-- * * SB Forms Contact Form * *-->
-                      <!-- * * * * * * * * * * * * * * *-->
-                      <!-- This form is pre-integrated with SB Forms.-->
-                      <!-- To make this form functional, sign up at-->
-                      <!-- https://startbootstrap.com/solution/contact-forms-->
-                      <!-- to get an API token!-->
-                      <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                          <!-- Name input-->
-                          <div class="form-floating mb-3">
-                              <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                              <label for="name">Full name</label>
-                              <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                          </div>
-                          <!-- Email address input-->
-                          <div class="form-floating mb-3">
-                              <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                              <label for="email">Email address</label>
-                              <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                              <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                          </div>
-                          <!-- Phone number input-->
-                          <div class="form-floating mb-3">
-                              <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                              <label for="phone">Phone number</label>
-                              <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                          </div>
-                          <!-- Message input-->
-                          <div class="form-floating mb-3">
-                              <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                              <label for="message">Message</label>
-                              <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                          </div>
-                          <!-- Submit success message-->
-                          <!---->
-                          <!-- This is what your users will see when the form-->
-                          <!-- has successfully submitted-->
-                          <div class="d-none" id="submitSuccessMessage">
-                              <div class="text-center mb-3">
-                                  <div class="fw-bolder">Form submission successful!</div>
-                                  To activate this form, sign up at
-                                  <br />
-                                  <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                              </div>
-                          </div>
-                          <!-- Submit error message-->
-                          <!---->
-                          <!-- This is what your users will see when there is-->
-                          <!-- an error submitting the form-->
-                          <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                          <!-- Submit Button-->
-                          <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div>
-                      </form>
-                  </div>
-              </div>
-              <div class="row gx-4 gx-lg-5 justify-content-center">
-                  <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                      <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                      <div>+1 (555) 123-4567</div>
-                  </div>
-              </div>
-          </div>
-      </section>
+      
       <!-- Footer-->
       <footer class="bg-light py-5">
           <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div></div>
@@ -268,17 +181,6 @@
       <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
       <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
       <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-      <script type="text/javascript">
-          (function(d, m){
-              var kommunicateSettings = 
-                  {"appId":"85fe3ab4e8ed09c90996e77a609adfa0","popupWidget":true,"automaticChatOpenOnNavigation":true};
-              var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-              s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-              var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-              window.kommunicate = m; m._globals = kommunicateSettings;
-          })(document, window.kommunicate || {});
-      /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-      </script>
         
       </body>
 </html>
