--- a/index.html
+++ b/index.html
@@ -105,13 +105,23 @@
       <section class="page-section" id="networks">
         <h2 class="text-center mt-0">Explore the networks</h2>
             <hr class="divider" />
+            <br>
         <div class="container px-4 px-lg-5">
-            <iframe allowfullscreen="allowfullscreen" src="network/index.html" title="Ignazio and Paolo Network" width="100%" height="900px">
+            <h4 class="text-center mt-0">Paolo and Ignazio Florio's Network</h4>
+            <iframe allowfullscreen="allowfullscreen" src="network_Ignazio/index.html" title="Ignazio and Paolo Network" width="100%" height="900px">
+            </iframe>
+        </div>
+        <br><br><br>
+        <div class="container px-4 px-lg-5">
+            <h4 class="text-center mt-0">Vincenzo Florio's Network</h4>
+            <iframe allowfullscreen="allowfullscreen" src="network/index.html" title="Vincenzo Network" width="100%" height="900px">
             </iframe>
         </div>
       </section>
       <!-- Portfolio-->
       <div id="portfolio">
+        <h2 class="text-center mt-0">Something more about the Florios</h2>
+        <hr class="divider" />
           <div class="container-fluid p-0">
               <div class="row g-0">
                   <div class="col-lg-4 col-sm-6">
@@ -168,7 +178,25 @@
       
       <!-- Footer-->
       <footer class="bg-light py-5">
-          <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div></div>
+        <div class="container px-4 px-lg-5">
+          <div class="small text-center text-muted">
+            <div class="container px-4 px-lg-5">
+                <div class="small-cards" id ="contact_card">
+                    <img  class="icon" src="images/marta.jpg"></br><span class="text-center mt-0"><b>Marta Soricetti</b><br>DHDK student - University of Bologna</span><br>
+                    <a href="mailto:marta.soricetti@studio.unibo.it"><i class="bi bi-envelope"></i></a>            <a href="https://www.linkedin.com/in/marta-soricetti-091495184"><i class="bi bi-linkedin"></i></a>
+                </div></br></br>
+                Copyright &copy; The Uncrowned Kings of Sicily, 2022<br>
+                The Uncrowned Kings of Sicily is an end-of-course project for the <a
+                href="https://www.unibo.it/it/didattica/insegnamenti/insegnamento/2021/424631">"Digital Text in the
+                Humanities: Theories, Methodologies and Applications"</a> course (2021/2022)<br>
+                held by <a href="https://www.unibo.it/sitoweb/tiziana.mancinelli2/">Professor Tiziana Mancinelli</a>
+                within the <a href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">Digital Humanities and
+                Digital Knowledge Master's Degree</a><br> at <a href="https://www.unibo.it/en/homepage">Alma Mater
+                Studiorum - University of Bologna</a><br><br>
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />
+            </div>
+          </div>
+        </div>
       </footer>
       <!-- Bootstrap core JS-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
