--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                       <li class="nav-item"><a class="nav-link" href="#project">The Project</a></li>
                       <li class="nav-item"><a class="nav-link" href="#networks">Explore the networks</a></li>
                       <li class="nav-item"><a class="nav-link" href="#portfolio">More about the Florios</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#portfolio">Documentation</a></li>
                   </ul>
               </div>
           </div>
