--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <li class="nav-item"><a class="nav-link" href="#project">The Project</a></li>
                       <li class="nav-item"><a class="nav-link" href="#networks">Explore the networks</a></li>
                       <li class="nav-item"><a class="nav-link" href="#portfolio">More about the Florios</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#portfolio">Documentation</a></li>
+                      <li class="nav-item"><a class="nav-link" href="documentation.ipynb">Documentation</a></li>
                   </ul>
               </div>
           </div>
