--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2 class="text-center mt-0">The Project</h2>
             <hr class="divider" />
             <div class="cards-container">
-                <div class="small-cards"><img class="icon" src="images/icon2.png"><span class="bolder icon-tit"><a href="https://github.com/SongsTOPoems/STOP/blob/main/know_extraction_notebook.ipynb"><b>Text annotation using TEI</b></a></span><br></div>
+                <div class="small-cards"><img class="icon" src="images/icon2.png"><span class="bolder icon-tit"><a href="doc_html.html#TEI"><b>Text annotation using TEI</b></a></span><br></div>
                 <div class="small-cards"><img class="icon" id="icon2" src="images/icon3.png"><span class="bolder icon-tit"><a href="project/reader.html"><b>Dataset extraction using Python</b></a></span><br></div>
                 <div class="small-cards"><img class="icon" id="icon3" src="images/icon4.png"><span class="bolder icon-tit"><a href="project/ontology-development.html"><b>Networks' visualization with Gephi</b></a></span><br></div>
                 <div class="small-cards"><img class="icon" id="icon5" src="images/icon5.png"><span class="bolder icon-tit"><a href="project/competency-questions.html"><b>Networks' analysis</b></a></span><br></div>
