--- a/doc_html.html
+++ b/doc_html.html
@@ -42,20 +42,24 @@
               </div>
           </div>
       </nav>
-        <section class="page-section bg-primary">
-            <iframe src="documentation.html" scrolling= "no" style="
+      <section class="page-section bg-primary">
+      <div class="container px-4 px-lg-5">
+        <iframe allowfullscreen="allowfullscreen" src="documentation.html" title="Project Documentation" 
+        style="
             top: 0px;
             bottom: 0px;
-            right: 0px;
+            left: 0px;
             width: 100%;
             border: none;
             margin: 0;
-            padding: 0;
+            padding: no;
             overflow: hidden;
             position: float;
-            height: 2040em;
-          "></iframe>
-        </section>
+            height: 1980em;">
+        </iframe>
+      </div>
+        
+      </section>
       
  <!-- Footer-->
  <footer class="bg-light py-5">
