--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         Palermo has been the theatre of the Florios' business growth, the city observed with admiration the family, but the pride was mitigated by the envy: those successful men would always have been immigrated, <em>facchini</em>, <em>portarobbe</em>. But Palermo didn't know that the Florios, in their actions, were exactly moved by a strong will of social redemption.</br>
                         <em>Tu puoi arrivare dove io non sono arrivato</em></br>
                         Through generations, new ties with increasingly important people, investments and clever intuitions, the Florios became the uncrowned rulers of Sicily.</br>
-                        The Stefania Auci's novel intertwines the Florios' business and social rise with their private lives, on the backgrounf of the most troubled years of Italian history, from the 1818 movements to the Garibaldi's landing in Sicily.
+                        The Stefania Auci's novel intertwines the Florios' business and social rise with their private lives, on the background of the most troubled years of Italian history, from the 1818 movements to the Garibaldi's landing in Sicily.
                       </p>
                       <p class="text-white-75 mb-4">
                         My project consists in a network analysis of the Stefania Auci's novel. In particular, I created two networks, one till the death of Ignazio Florio (1776-1828), so with the two brothers, Paolo and Ignazio, as the main nodes of the network, and another one till the end of the book, that is, till the death of Vincenzo Florio (1799-1868).</br>
